# mkdocs-azure-pipelines

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ado-pipe-to-md.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.cfg  test-pipe.md  test-pipe.yml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  tox.yml
docs/: index.md  notindex.md
mkdocs/: ado-pipe-to-md.py  ado_pipe_to_md.py  util.py
src/mkdocs_azure_pipelines/: __init__.py  ado_pipe_to_md.py  cli.py  extension.py  plugin.py
tests/: __init__.py  check_generic_test.py  test_ado_pipe_to_md.py  test_cli.py  test_mkdocs_azure_pipelines.py  test_plugin.py
tests/resources/: jobs-template.yml  steps-template.yml  test-pipe.md  test-pipe.yml
tests/resources/folder_with_pipelines/: no-title-template.yml  test-pipe2.yml
tests/resources/folder_with_pipelines/folder_in_folder_with_pipelines/: full-pipeline.yml  steps-template-in-folder-in-folder.yml  test-pipe1.1.yml  test-pipe1.2.yml
