[project]
name = "mkdocs-azure-pipelines"
requires-python = ">=3.10"
dynamic = ["version"]
description = "MkDocs plugin to generate documentation for Azure Pipelines/Templates"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Carl Westman", email = "carl.westman91@gmail.com" }]
dependencies = ["mkdocs~=1.6.1"]

[project.entry-points."markdown.extensions"]
mkdocs-azure-pipelines = "mkdocs_azure_pipelines:MkAzurePipelinesExtension"

[project.urls]
Repository = "https://github.com/Wesztman/mkdocs-azure-pipelines"

[dependency-groups]
dev = [
  "pre-commit~=4.1.0",
  "pyright~=1.1.394",
  "ruff~=0.9.7",
  "pytest~=8.3.4",
  "pytest-sugar>=1.0.0",
]

[tool.ruff]
src = ["src"]
extend-exclude = ["conf.py"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = [
  "S101", # Use of `assert` detected
  "D103", # Missing docstring in public function
]
"**/__init__.py" = [
  "F401", # Imported but unused
  "F403", # Wildcard imports
]
"docs/**" = [
  "INP001", # Requires __init__.py but docs folder is not a package.
]

[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
exclude = [".venv/", "build/", "dist/", "tests/"]

[tool.coverage.run]
omit = ["*tests*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
