[metadata]
name = mkdocs_azure_pipelines
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: Implementation :: CPython

[flake8]
max-line-length = 88
extend-ignore =
    E203,
