[metadata]
name = mkdocs_azure_pipelines
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.10

[flake8]
max-line-length = 88
extend-ignore =
    E203,
